Tag h2 and style added

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
  <body>
  <h1 style="color: #ff0000">Hello World!</h1>
  <p style="color: #000fff">This is some text in a paragraph.</p>
+<h2 style="color: yellow">Text</h2>
  </body>
 </html>
