--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
  <h1 style="color: #ff0000">Hello World!</h1>
  <p style="color: #000fff">This is some text in a paragraph.</p>
 <h2 style="color: yellow">Text</h2>
+<h3>Text 2</h3>
+<h3>Text 2</h3>
+<h3>Text 2</h3>
  </body>
 </html>
