--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  <link rel="stylesheet" href="styles.css" />
  <meta charset="UTF-8" />
  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
- <title>My first document</title>
+ <title>My first site</title>
  </head>
  <body>
  <h1 style="color: #ff0000">Hello World!</h1>
@@ -14,5 +14,6 @@
 <h3>Text 2</h3>
 <h3>Text 2</h3>
 <h4>Text 3</h4>
+<p>Text</p>
  </body>
 </html>
